# tutor-contrib-pod-autoscaling

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  commitlint.config.mjs  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
changelog.d/scriv/: entry_title.md.j2
tutorpod_autoscaling/: __about__.py  hooks.py  plugin.py
tutorpod_autoscaling/patches/: k8s-override  kustomization-resources
tutorpod_autoscaling/templates/pod-autoscaling/k8s/: hpa.yml  keda.yml  vpa.yml
