[project]
name = "tutor-contrib-pod-autoscaling"
version = "21.0.0"
description = "pod-autoscaling plugin for Tutor"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{name = "Jhony Avella"}]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "tutor~=21.0",
]

[project.urls]
homepage = "https://github.com/eduNEXT/tutor-contrib-pod-autoscaling"
repository = "https://github.com/eduNEXT/tutor-contrib-pod-autoscaling"
"Issue tracker" = "https://github.com/eduNEXT/tutor-contrib-pod-autoscaling/issues"

[project.entry-points."tutor.plugin.v1"]
pod-autoscaling = "tutorpod_autoscaling.plugin"

[tool.wheel]
universal = true

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = "Added, Changed, Fixed, Removed"
format = "md"
md_header_level = 2
new_fragment_template = "file: changelog.d/scriv/new_fragment.md.j2"
entry_title_template = "file: changelog.d/scriv/entry_title.md.j2"

[tool.uv.build-backend]
module-root = "."
module-name = "tutorpod_autoscaling"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "scriv>=1.7.0",
    "ty>=0.0.1a29",
]
